--- a/student_survey/Jenkinsfile
+++ b/student_survey/Jenkinsfile
@@ -35,11 +35,11 @@ pipeline {
         stage('Build Docker Image') {
             steps {
                 sh '''
-                    docker buildx create --use --name builder || true
                     docker buildx build --platform linux/amd64 \
-                      -t $REGION-docker.pkg.dev/$PROJECT_ID/$REPO_NAME/$IMAGE_NAME:$IMAGE_TAG \
-                      --push .
-                '''
+                    -f student_survey/Dockerfile \
+                    -t $REGION-docker.pkg.dev/$PROJECT_ID/$REPO_NAME/$IMAGE_NAME:$IMAGE_TAG \
+                    --push student_survey/
+                    '''
             }
         }
 
