--- a/student_survey/Jenkinsfile
+++ b/student_survey/Jenkinsfile
@@ -48,8 +48,8 @@ pipeline {
                 sh '''
                     gcloud container clusters get-credentials $CLUSTER_NAME --region=$REGION
                     sed -i "s|image: .*$|image: $REGION-docker.pkg.dev/$PROJECT_ID/$REPO_NAME/$IMAGE_NAME:$IMAGE_TAG|" $DEPLOYMENT_YAML
-                    kubectl apply -f $DEPLOYMENT_YAML
-                    kubectl apply -f $SERVICE_YAML
+                    kubectl apply -f student_survey/$DEPLOYMENT_YAML
+                    kubectl apply -f student_survey/$SERVICE_YAML
                 '''
             }
         }
